# autoSLAM

./: .gitignore  CMakeLists.txt
src/: CMakeLists.txt
src/ch2/: motion.cc
src/ch3/: eskf.hpp  process_gnss.cc  run_eskf_gins.cc  run_imu_integration.cc  static_imu_init.cc
src/ch4/: g2o_types.cc  gins_pre_integ.cc  gins_pre_integ.h  imu_preintegration.cc  imu_preintegration.h  run_gins_pre_integ.cc  test_preintegration.cc
src/common/: g2o_types.cc  g2o_types.h  io_utils.h  nav_state.h
